# wx_cmake_template

./: .astylerc  CMakeLists.txt  go_linux.sh  go_win.sh  note  update_ccls.sh
rc/: noname.xrc  wx_fb1.fbp
src/: CMakeLists.txt  main.cpp  main_rc.cpp
